# CausalEstimate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  publish.yml
CausalEstimate/: __init__.py
CausalEstimate/core/: effect_computation.py  logging.py  multi_estimator.py
CausalEstimate/estimators/: aipw.py  base.py  ipw.py  matching.py  tmle.py
CausalEstimate/filter/: propensity.py
CausalEstimate/interface/: estimator.py  multi_estimator.py
CausalEstimate/matching/: matching.py
CausalEstimate/simulation/: binary_simulation.py  survival_simulation.py
CausalEstimate/stats/: stats.py  utils.py
CausalEstimate/utils/: checks.py  constants.py  logging.py  utils.py
CausalEstimate/vis/: plotting.py
pycausal/api/: estimator.py
pycausal/estimators/: aipw.py  ipw.py  matching.py  tmle.py
pycausal/matching/: assignment.py  helpers.py  matching.py
pycausal/simulation/: binary_simulation.py
pycausal/utils/: helpers.py
tests/: test_matching.py
tests/functional/: test_aipw.py  test_matching.py
tests/helpers/: models.py  setup.py  setup_survival.py  survival_utils.py
tests/simulation/: test_binary_simulation.py
tests/test_api/: test_api.py
tests/test_core/: test_estimator.py
tests/test_estimators/: test_aipw.py  test_ipw.py  test_matching.py  test_tmle.py
tests/test_functional/: base.py  test_aipw.py  test_ipw.py  test_matching.py  test_tmle.py
tests/test_interface/: test_datasets.py  test_estimator.py  test_interface.py
tests/test_matching/: test_matching.py
tests/test_stats/: test_stats.py  test_utils.py
(+14 files in other folders)
